src/objects/gcsdagl__c.object
<CustomObject>
    <description>用于记录工程师的个人履历、培训经历等内容</description>
    <fields>
        <fullName>Field10__c</fullName>
        <label>准分子检查设备总结资料（篇）</label>
        <summarizedField>promotion__c.Field6__c</summarizedField>
        <summaryForeignKey>promotion__c.engineerrecord1__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <label>欧堡总结资料（篇）</label>
        <summarizedField>promotion__c.Field7__c</summarizedField>
        <summaryForeignKey>promotion__c.engineerrecord1__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Field12__c</fullName>
        <label>路视资料总结（篇）</label>
        <summarizedField>promotion__c.Field8__c</summarizedField>
        <summaryForeignKey>promotion__c.engineerrecord1__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LensAr__c</fullName>
        <label>飞白-LensAr培训</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basic service training</fullName>
                </value>
                <value>
                    <fullName>Advanced service training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OPTOS200TXpx__c</fullName>
        <label>OPTOS 200TX</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Level Ⅰ</fullName>
                </value>
                <value>
                    <fullName>LevelⅡ</fullName>
                </value>
                <value>
                    <fullName>LevelⅢ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OPTOS_Californiapx__c</fullName>
        <label>OPTOS California 培训</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Level Ⅰ</fullName>
                </value>
                <value>
                    <fullName>LevelⅡ</fullName>
                </value>
                <value>
                    <fullName>LevelⅢ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OPTOS_Daytonapx__c</fullName>
        <label>OPTOS Daytona培训</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Level Ⅰ</fullName>
                </value>
                <value>
                    <fullName>LevelⅡ</fullName>
                </value>
                <value>
                    <fullName>LevelⅢ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OPTOS_P200px__c</fullName>
        <label>OPTOS P200培训</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Level Ⅰ</fullName>
                </value>
                <value>
                    <fullName>LevelⅡ</fullName>
                </value>
                <value>
                    <fullName>LevelⅢ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCHWINDpx__c</fullName>
        <label>SCHWIND产品培训</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basic（原厂）</fullName>
                </value>
                <value>
                    <fullName>Advanced（原厂）</fullName>
                </value>
                <value>
                    <fullName>Level Ⅰ（国内）</fullName>
                </value>
                <value>
                    <fullName>LevelⅡ（国内）</fullName>
                </value>
                <value>
                    <fullName>深度培训（国内）</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scout__c</fullName>
        <label>Scout培训</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basic service training</fullName>
                </value>
                <value>
                    <fullName>Advanced service training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>biyetyuanxiao__c</fullName>
        <label>毕业院校</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>工程师</label>
        <referenceTo>User</referenceTo>
        <relationshipName>gcsdagl</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gscdaqy__c</fullName>
        <label>区域</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>北区</fullName>
                </value>
                <value>
                    <fullName>南区</fullName>
                </value>
                <value>
                    <fullName>东区</fullName>
                </value>
                <value>
                    <fullName>西南</fullName>
                </value>
                <value>
                    <fullName>技术部</fullName>
                </value>
                <value>
                    <fullName>飞白</fullName>
                    <label>飞白技术部本部</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>jrykhyrq__c</fullName>
        <description>用于记录加入眼科行业的日期</description>
        <label>加入眼科行业日期</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>jrylhyrq__c</fullName>
        <description>用于记录加入医疗行业的日期</description>
        <label>加入医疗行业日期</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>lushiVX120px__c</fullName>
        <label>路视-VX120培训</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Level Ⅰ</fullName>
                </value>
                <value>
                    <fullName>LevelⅡ</fullName>
                </value>
                <value>
                    <fullName>LevelⅢ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lushicpzj__c</fullName>
        <label>路视产品资料总结（篇）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lzrq__c</fullName>
        <label>离职日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>lzyy__c</fullName>
        <label>离职原因</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mwrzrq__c</fullName>
        <description>用于记录加入明望公司的时间</description>
        <label>明望入职日期</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mwsl__c</fullName>
        <formula>(today() -  mwrzrq__c) / 365</formula>
        <label>明望司龄（年）</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>optoszjzlps__c</fullName>
        <label>欧堡总结资料（篇）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>specially__c</fullName>
        <label>专业</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ykhyjy__c</fullName>
        <formula>( today() -  jrykhyrq__c  )  / 365</formula>
        <label>眼科行业经验（年）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ylhyjy__c</fullName>
        <formula>( today() -  jrylhyrq__c  )  / 365</formula>
        <label>医疗行业经验（年）</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zfzzlzj__c</fullName>
        <label>准分子总结资料（篇）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>工程师档案管理</label>
    <listViews>
        <fullName>All</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>engineer__c</columns>
        <columns>gscdaqy__c</columns>
        <columns>Field1__c</columns>
        <columns>Field2__c</columns>
        <columns>mwsl__c</columns>
        <columns>zfzzlzj__c</columns>
        <columns>optoszjzlps__c</columns>
        <columns>SCHWINDpx__c</columns>
        <columns>OPTOS_Daytonapx__c</columns>
        <columns>OPTOS200TXpx__c</columns>
        <columns>lushiVX120px__c</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>档案编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>工程师档案管理</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>